# memory_manager_with_swap

./: .gitignore  CMakeLists.txt  Makefile  README.md  TASK.md  TODO.txt  check.cpp  check.hpp  check.sh  check_result.sh  config.hpp  format_time.hpp  logger.cpp  logger.hpp  memory_block.cpp  memory_block.hpp  memory_manager.cpp  memory_manager.hpp  memory_pool.cpp  memory_pool.hpp  run_tests.sh  swap.cpp  swap.hpp  table.cpp  table.hpp  test.cpp  timer.cpp  timer.hpp  todo.txt  utils.cpp  utils.hpp
logs/: log_fedora_copy6GB_ram100MB.txt  log_win10_copy6GB_ram100MB (1).txt  log_win10_copy6GB_ram100MB.txt  log_windows10_copy280MB_ram10MB.txt
source/: CMakeLists.txt  test.cpp
source/memory_manager/: CMakeLists.txt  memory_block.cpp  memory_block.hpp  memory_manager.cpp  memory_manager.hpp  memory_pool.cpp  memory_pool.hpp  swap.cpp  swap.hpp
source/utils/: CMakeLists.txt  logger.hpp  utils.cpp  utils.hpp
